<resources>
    <string name="app_name">Ansor Market</string>

    <string name="splash_desc">Arzon,Sifatli va Ishonchli!</string>
    <string name="please_wait">Iltimos kuting…</string>
    <string name="error_message">Xatolik yuz berdi</string>
    <string name="intro_sign_in">Tushunarli</string>
    <string name="intro_sign_up">Ro\'yxatdan o\'tish</string>
    <string name="image_content">image_content</string>
    <string name="intro_text_description">Shahrixon shahri bo\'yicha Oziq-ovqat mahsulotlari yetkazib berish xizmati</string>
    <string name="sign_up_description_text">Ro\'yxatdan o\'tish uchun ismingizni, Telephone va parolingizni kiriting.</string>
    <string name="name">Ismingiz</string>
    <string name="login">Login</string>
    <string name="password">Parol</string>
    <string name="phone">Telefon raqamingiz</string>
    <string name="submit">Tasdiqlash</string>
    <string name="registration_successful"> Ro\'yxatdan o\'tildi!</string>
    <string name="registration_failed">Xatolik ro\'y berdi \nIltimos, Login ni o\'zgartiring </string>
    <string name="authentication_failed">Login yoki parol noto\'g\'ri.</string>
    <string name="login_successful">Kirish muvaffaqiyatli bajarildi</string>
    <string name="please_enter_name">Iltimos, Ism kiriting</string>
    <string name="please_enter_number">Iltimos, Raqam  kiriting</string>
    <string name="please_enter_correct_number">Iltimos, To\'g\'ri raqam kiriting</string>
    <string name="please_click_back_again_to_exit">Chiqish uchun orqaga qaytish tugmasini yana bosing</string>
    <string name="goods">Mahsulotlar</string>
    <string name="cart">Xarid savati</string>
    <string name="profile">Profilim</string>
    <string name="myOrders">Buyurtmalarim</string>
    <string name="address">Manzil</string>
    <string name="update">Tahrirlash</string>
    <string name="logout">chiqish</string>
    <string name="denied_permission">"Siz xotiraga kirishga ruxsatini rad etdingiz, bunga Telefon sozlamalaridan ham ruxsat berishingiz mumkin."</string>
    <string name="image_uploaded">Rasm muvaffaqiyatli yuklandi</string>
    <string name="image_error">Rasmni yuklashda xatolik!</string>
    <string name="denied_permissions">Ilovaga kerakli ruxsatlar berilmagan, Iltimos, sozlamalarga kirib ruxsat bering.</string>
    <string name="off_work_time">Hozirda ish vaqti tugagan, buyurtmangiz ertalab yetkazib beriladi</string>
    <string name="order_off_work_time">Buyurtma berish</string>
    <string name="proceed_off_work_time">Davom etish</string>
    <string name="go_to_settings">Sozlamalarga o\'tish</string>
    <string name="close_dialog_perm">Bekor qilish</string>
    <string name="add">Qoshish</string>
    <string name="item_name">Nomi</string>
    <string name="create">Qo\'shish</string>
    <string name="item_weight">Vazni</string>
    <string name="item_price">Narxi</string>
    <string name="invalid_item_type">Iltimos, barcha joylarni to\'ldiring</string>
    <string name="image_not_selected">Rasm tanlang!</string>
    <string name="board_created">Mahsulot qo\'shildi</string>
    <string name="cart_removed">Mahsulot savatdan olib tashlandi</string>
    <string name="item_already_created">Mahsulot allaqachon qo\'shilgan</string>
    <string name="board_creating_error">Mahsulot kiritishda hatolik</string>
    <string name="add_cart">Savatga</string>
    <string name="sample_price">0</string>
    <string name="sample_currency">So\'m</string>
    <string name="sample_item_name">Coca-Cola</string>
    <string name="sample_weight">1.5 l</string>
    <string name="sample_minus">-</string>
    <string name="sample_quantity">22</string>
    <string name="sample_add">+</string>
    <string name="payment_method">Yetkazib berilganda NAQD pulda to\'lanadi</string>
    <string name="log_out_dialog">Profilingizdan chiqmoqchimisiz?</string>
    <string name="cash_method">NAQD pul</string>
    <string name="payment_amount">Narxi \:</string>
    <string name="delivery_fee">Bepul yetkazib berish uchun eng kam Buyurtma narxi 100 000 so\'m</string>
    <string name="deliver_charge">Yetkazib berish \: </string>
    <string name="deliver_charge_amount">10000</string>
    <string name="fee_grand_info">To\'lanadigon summa \: </string>
    <string name="make_order">Buyurtma berish</string>
    <string name="subtotal">Buyurtma narxi \: </string>
    <string name="subtotal_amount">0</string>
    <string name="ordered_placed">Buyurtma jonatildi</string>
    <string name="ordering_error">Buyurtma berishda xatolik!!</string>
    <string name="order_number">Buyurtma raqami \:</string>
    <string name="ordered_date">Vaqti \:</string>
    <string name="sample_quantity_dona">dona</string>
    <string name="order_status">Buyurtma holati :</string>
    <string name="active_order_status">Holati :</string>
    <string name="order_user">Ismi :</string>
    <string name="order_address">Yetkaziladigon manzil \:</string>
    <string name="empty_cart_text">Savatingiz Bo\'sh !!</string>
    <string name="order_in_process">Jarayonda\.\.\. </string>
    <string name="order_getting_ready">Terilmoqda</string>
    <string name="order_delivering">Yo\'lda</string>
    <string name="order_delivered">Yetkazib berilgan!</string>
    <string name="order_cancelled">Bekor qilingan</string>
    <string name="contact_us">Biz bilan bog\'laning</string>
    <string name="back_to">Ortga</string>
    <string name="ilovada_xatolik">Ilovada xatolik bormi ? \:</string>
    <string name="deliver_contact">Yetkazib berish \:</string>
    <string name="deliver_market_contact">Sotuv bo\'limi :</string>
    <string name="working_hours">Ish vaqti:</string>
    <string name="empty_order_text">Buyurtmalar mavjud emas</string>
    <string name="active_orders">Faol Buyurtmalar</string>
    <string name="active_phone">Telefon raqami</string>
    <string name="completed_orders">Tugallangan buyurtmalar</string>
    <string name="work_from">dan</string>
    <string name="work_till">gacha</string>
    <string name="search">Qidiruv</string>
    <string name="new_Order">Yangi Buyurtma</string>
    <string name="uz_code">+998</string>
    <string name="insert_address">Iltimos, Profilingizga o\'tib manzilni kiriting</string>
    <string name="resend_otp">Qaytadan jo\'natish</string>
    <string name="register_error_message">Xatolik yuz berdi. Iltimos keyinroq qayta urinib ko\'ring</string>
    <string name="change_language_style">Ilova yozuvini o\'zgartiring</string>
    <string name="lotincha">LOTINCHA</string>
    <string name="kirilcha">КИРИЛЧА</string>
    <string name="reg_text_description">Mahsulot buyurtma berish uchun ro\'yhatdan o\'tish kerak bo\'ladi</string>
    <string name="please_enter_address">Iltimos manzil kiriting</string>
    <string name="fragment_o_t_p">Raqamni tasdiqlash</string>
    <string-array name="item_type">
        <item>Ichimliklar</item>
        <item>Qandolat mahsulotlari</item>
        <item>Sut Mahsulotlari</item>
        <item>Tortlar va Pishiriqlar</item>
        <item>Konservalar</item>
        <item>Sneklar</item>
        <item>Mevalar</item>
        <item>Bolalar uchun</item>
        <item>Un Mahsulotlari</item>
        <item>Souslar</item>
        <item>Go\'sht Mahsulotlari</item>
        <item>Gigiena vositalari</item>
        <item>Oshxona</item>
        <item>Yog\'lar</item>
        <item>Choy va Kofelar</item>
        <item>Yarim Tayyor</item>
        <item>Guruch va Don</item>
        <item>Ziravorlar</item>
        <item>Boshqalar</item>
    </string-array>
    <string-array name="update_order_status">
        <item>Jarayonda\.\.\.</item>
        <item>Terilmoqda</item>
        <item>Yo\'lda</item>
        <item>Yetkazib berilgan!</item>
        <item>Bekor qilingan</item>
    </string-array>
    <string name="all_types">Barchasi</string>
    <string name="ichimliklar">Ichimliklar</string>
    <string name="qandolat_mahsulotlari">Qandolat mahsulotlari</string>
    <string name="sut_mahsulotlari">Sut Mahsulotlari</string>
    <string name="tortlar_va_pishiriqlar">Tortlar va Pishiriqlar</string>
    <string name="konservalar">Konservalar</string>
    <string name="sneklar">Sneklar</string>
    <string name="mevalar">Mevalar</string>
    <string name="bolalar_uchun">Bolalar uchun</string>
    <string name="un_mahsulotlari">Un Mahsulotlari</string>
    <string name="souslar">Souslar</string>
    <string name="gosht">Go\'sht Mahsulotlari</string>
    <string name="gigiena_vositalari">Gigiena vositalari</string>
    <string name="oshxona">Oshxona</string>
    <string name="yoglar">Yog\'lar</string>
    <string name="choy_va_kofelar">Choy va Kofelar</string>
    <string name="yarim_tayyor">Yarim Tayyor</string>
    <string name="guruch_va_don">Guruch va Don</string>
    <string name="ziravorlar">Ziravorlar</string>
    <string name="boshqalar">Boshqalar</string>

    <string name="hint_all_types">Barchasi</string>
    <string name="hint_ichimliklar">Ichimliklar</string>
    <string name="hint_qandolat_mahsulotlari">Qandolat mahsulotlari</string>
    <string name="hint_sut_mahsulotlari">Sut Mahsulotlari</string>
    <string name="hint_tortlar_va_pishiriqlar">Tortlar va Pishiriqlar</string>
    <string name="hint_konservalar">Konservalar</string>
    <string name="hint_sneklar">Sneklar</string>
    <string name="hint_mevalar">Mevalar</string>
    <string name="hint_bolalar_uchun">Bolalar uchun</string>
    <string name="hint_un_mahsulotlari">Un Mahsulotlari</string>
    <string name="hint_souslar">Souslar</string>
    <string name="hint_gosht">Go\'sht Mahsulotlari</string>
    <string name="hint_gigiena_vositalari">Gigiena vositalari</string>
    <string name="hint_oshxona">Oshxona</string>
    <string name="hint_yoglar">Yog\'lar</string>
    <string name="hint_choy_va_kofelar">Choy va Kofelar</string>
    <string name="hint_yarim_tayyor">Yarim Tayyor</string>
    <string name="hint_guruch_va_don">Guruch va Don</string>
    <string name="hint_ziravorlar">Ziravorlar</string>
    <string name="hint_boshqalar">Boshqalar</string>


</resources>