<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainPageFragment">

    <fragment
        android:id="@+id/mainPageFragment"
        android:name="com.hfad.ansormarket.mainFragments.MainPageFragment"
        android:label="@string/goods"
        tools:layout="@layout/fragment_main_page" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.hfad.ansormarket.mainFragments.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/myProfileFragment"
        android:name="com.hfad.ansormarket.mainFragments.MyProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_my_profile">

        <action
            android:id="@+id/action_myProfileFragment_to_OTPFragment"
            app:destination="@id/OTPFragment"
            app:popUpTo="@id/myProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.hfad.ansormarket.mainFragments.OrdersFragment"
        android:label="@string/myOrders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/OTPFragment"
        android:name="com.hfad.ansormarket.logInScreens.OTPFragment"
        android:label="@string/fragment_o_t_p"
        tools:layout="@layout/fragment_o_t_p">
        <argument
            android:name="OTP"
            app:argType="string" />
        <argument
            android:name="resendToken"
            app:argType="com.google.firebase.auth.PhoneAuthProvider$ForceResendingToken" />
        <argument
            android:name="phoneNumber"
            app:argType="string" />
        <argument
            android:name="userName"
            app:argType="string" />
        <argument
            android:name="userAddress"
            app:argType="string" />
        <action
            android:id="@+id/action_OTPFragment_to_myProfileFragment"
            app:destination="@id/myProfileFragment"
            app:popUpTo="@id/mainPageFragment" />
    </fragment>
</navigation>