<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order_item_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/creamy_border_shape_button_rounded"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp"
    android:visibility="visible">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/active_info_cart_item_image"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/image_content"
        android:scaleType="fitCenter"
        android:src="@drawable/background_intro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/active_info_cart_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/amita"
                android:text="@string/sample_price"
                android:textColor="#FF4B4B"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/active_info_currency_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/sample_currency"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/active_info_cart_item_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/yeseva_one"
            android:text="@string/sample_weight"
            android:textAlignment="center"
            android:textColor="@color/list_text_color"
            android:textSize="11sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/active_info_cart_item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:text="@string/sample_item_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/active_info_cart_item_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/almarai_light"
                android:gravity="end"
                android:text="@string/sample_quantity"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/active_quantity_dona"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/almarai_light"
                android:gravity="start"
                android:text="@string/sample_quantity_dona"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>