<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/creamy_border_shape_button_rounded"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/contact_us"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/lo_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/deliver_contact"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/delivery_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/amita"
                android:text="@string/sample_price"
                android:textColor="#FF4B4B"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lo_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/deliver_market_contact"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/market_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/amita"
                android:text="@string/sample_price"
                android:textColor="#FF4B4B"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lo_appMarket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/ilovada_xatolik"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/app_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/amita"
                android:text="@string/sample_price"
                android:textColor="#FF4B4B"
                android:textSize="11sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:text="@string/working_hours"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/working_hoursFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/chelsea_market"
                android:textColor="@color/colorPrimary"
                android:text="7"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/working_hoursFromText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/chelsea_market"
                android:textColor="@color/colorPrimary"
                android:text="@string/work_from"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/working_hoursTill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/chelsea_market"
                android:textColor="@color/colorPrimary"
                android:text="7"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/working_hoursTillText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="1dp"
                android:fontFamily="@font/chelsea_market"
                android:textColor="@color/colorPrimary"
                android:text="@string/work_till"
                android:textSize="11sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="@drawable/custom_ripple"
            android:gravity="center"
            android:paddingStart="20dp"
            android:layout_marginTop="15dp"
            android:paddingEnd="20dp"
            android:text="@string/back_to"
            android:textColor="@color/purple_700"
            android:textSize="18sp"
            app:backgroundTint="@null" />

    </LinearLayout>
</LinearLayout>